# LLM-PROJECTS

./: Jenkinsfile
finance-chatbot/: .dockerignore  .gitignore  Dockerfile  Jenkinsfile  README.md  pyproject.toml  requirements.txt
finance-chatbot/app/: main.py  main_agent.py  main_rag.py
finance-chatbot/app/common/: logger.py
finance-chatbot/app/components/: agentic_rag.py  create_index.py  embeddings.py  llm_setup.py  pdf_loader.py  retriever.py  tavily_search.py  vector_db.py
finance-chatbot/app/config/: config.py
finance-chatbot/app/templates/: index.html
finance-chatbot/custom_jenkins/: Dockerfile
